--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@
 
 language: objective-c
 # cache: cocoapods
+osx_image: xcode7.2
 podfile: Example/Podfile
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
